--- a/FileSystem.tt
+++ b/FileSystem.tt
@@ -31,9 +31,12 @@ private:
 
 public:
     void setUp() {
-	// TODO Remove
-	tmpDir = fs::current_path() / "test";
-	fs::create_directories(tmpDir);
+	char name[] = "testXXXXXX";
+
+	if (! mkdtemp(name))
+	    throw IoError(errno, "Couldn't create temporary directory");
+
+	tmpDir = fs::path(fs::current_path() / name);
 	rootDirMarshaller = new RootDirMarshallerImpl(tmpDir / "foo");
 	marshaller = new FsMarshallerMock();
 	accessManager = new AccessManagerImpl();
